--- a/style.css
+++ b/style.css
@@ -1,18 +1,39 @@
 *{
 	scroll-behavior: smooth;
 }
+h1,h2,h3,h4,h5,h6{
+	padding: 0;
+	margin: 0;
+}
+
 body{
 	margin: 0;
 	padding: 0;
+}
+h1{
+	font-size: 48px;
+	text-align: center;
+	width: 100%;
+	padding-bottom: 20px;
+	height: 100px;
+	margin-top: 60px;
+	padding-top: 60px;
+}
+#s2>h1{
+	margin-top: 0px;
+}
+p{
+	text-align: left;
+	padding: 0px;
+	margin: 0px;
+	position: relative;
+	font-size: 20px;
 }
 section{
 	position: relative;
 	width: 100%;
 	height: 850px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 5em;
+	display: block;
 	font-weight: 800;
 }
 section:nth-child(odd){
@@ -21,6 +42,7 @@ section:nth-child(odd){
 section:nth-child(even){
 	background:#9933CC;
 }
+
 nav{
 	position: fixed;
 	top: 0px;
@@ -44,4 +66,11 @@ section#s3:hover~nav a[href="#s3"]
 {
 	background:#0033CC;
 	color: #9999CC;
+}
+.grandColumn{
+	display: flex;
+	justify-content: space-between;
+}
+.column{
+	margin: 0px 40px 0px 40px;
 }
